# pics

./: README.md  devenv.nix  main.py  pyproject.toml
src/pics/: cli.py
