[project]
name = "pics"
version = "0.1.0"
description = "Picture management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pics = "pics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pics"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
